platform_components/connections/connections-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: connections-service
  labels:
    name: connections-service
spec:
  ports:
  - name: connections-app-http
    port: 80
    targetPort: 8000
  selector:
    name: connections-app
